Implement most main functionality of query_data tool

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dotenv
 boto3
 pyyaml
 dateparser
+prettytable
 unity_sds_client
 mdps-app-generator>=1.1.0
 # These packages are kept in JPL CAE Artifactory PyPi
